fixed small issue with overlapping circles

--- a/files/css/index.css
+++ b/files/css/index.css
@@ -67,6 +67,7 @@ body {
 	position: fixed;
 	left: -300px;
 	top: -300px;
+	z-index: -3;
 }
 
 #circle2 {
@@ -78,4 +79,5 @@ body {
 	position: fixed;
 	bottom: -300px;
 	right: -300px;
+	z-index: -3;
 }
